----------------------------------------------------------------------
 OmegaT 4.1.2 update 1
----------------------------------------------------------------------
  1 Enhancement
  0 Bug fix
  0 Localisation update
----------------------------------------------------------------------
4.1.2 update 1 vs 4.1.2

  Other changes:

  - Move First and Move Last buttons were added to the segmentation
dialog to move quickly the selected rule to the first or last position 
in the table

----------------------------------------------------------------------
 OmegaT 4.1.2 (2017-06-22)
----------------------------------------------------------------------
 12 Enhancements
  7 Bug fixes
  2 Localisation updates
----------------------------------------------------------------------
4.1.2 vs 4.1.1

  Implemented requests:

  - Option to translate target URLs in all Microsoft Office documents
  https://sourceforge.net/p/omegat/feature-requests/1308/

  - Support using bilingual files as TMs
  https://sourceforge.net/p/omegat/feature-requests/1312/

  - Create an Open menu in the Script Editor
  https://sourceforge.net/p/omegat/feature-requests/1314/

  - Compute PO fuzzies real match %
  https://sourceforge.net/p/omegat/feature-requests/1259/

  - Update MainMenuShortcuts.properties to reflect actual menus
  https://sourceforge.net/p/omegat/feature-requests/1315/

  - Glossary-based terminology checking
  https://sourceforge.net/p/omegat/feature-requests/355/

  Other changes:

  - New filter for WebVTT captions (*.vtt). Only simple files are
supported.

  - The new script extract_text_content.groovy allows exporting all
strings of the project to a single text file

  - The Scripting window now contains a Help menu with a link to OmegaT
Javadoc

  - The /scripts/readme.txt file contains links to OmegaT Javadoc,
Groovy and EcmaScript language references, the GPL v3

  - MyMemory translation engine improvements:
MyMemory allows the API key (-Dmymemory.api.key) to be set in the