@@ -636,15 +636,17 @@ public class PoFilter extends AbstractFilter {
                         this, protectedParts);
             } else {
                 List<ProtectedPart> protectedParts = TagUtil.applyCustomProtectedParts(source,
-                        PatternConsts.PRINTF_VARS, null);
-                entryParseCallback.addEntry(null, source, translation, fuzzy, comments, path + pathSuffix, this,
-                        protectedParts);
+                        PatternConsts.PRINTF_VARS, null);               
                 if (fuzzyTrue) { // We add a reference entry
                     String[] props = { SegmentProperties.COMMENT, comments, SegmentProperties.REFERENCE, "true" };
                     entryParseCallback.addEntryWithProperties(null, sourceFuzzyTrue.toString(), translation, false,
                             props, path + pathSuffix, this, null);
                     fuzzyTrue = false;
-                }
+                    fuzzy = false;    // Do not load false fuzzy when there is a real one
+                    translation = null;
+                } 
+                entryParseCallback.addEntry(null, source, translation, fuzzy, comments, path + pathSuffix, this,
+                        protectedParts);                
             }
         } else if (entryAlignCallback != null) {
             entryAlignCallback.addTranslation(null, source, translation, fuzzy, path + pathSuffix, this);
